--- a/frontend/restaurant-management-app/src/app/component/admin/admin-home/admin-dishes/admin-dishes.component.html
+++ b/frontend/restaurant-management-app/src/app/component/admin/admin-home/admin-dishes/admin-dishes.component.html
@@ -19,11 +19,11 @@
         <td>{{ dish.Name }}</td>
         <td>{{ dish.Description }}</td>
         <td>{{ dish.Price }}</td>
-        <td><img src="{{ dish.ImageURL }}" alt="{{ dish.Name }}" width="50"></td>
+        <td><img class="img" src="{{ dish.ImageURL }}" alt="Dish Image" ></td>
         <td>{{ categoryNames[dish.CategoryID] }}</td>
         <td>
-          <button class="btn btn-warning mr-2" (click)="openEditModal(dish)">Sửa</button>
-          <button class="btn btn-danger" (click)="deleteDish(dish.DishID)">Xóa</button>
+          <button class="btn btn-warning mr-2" (click)="setSelectedDish(dish)">Sửa</button>
+          <button class="btn btn-danger">Xóa</button>
         </td>
       </tr>
     </tbody>
@@ -34,37 +34,39 @@
 <div id="id01" class="modal">
   <div class="modal-dialog">
     <div class="modal-content">
+      <!-- Modal Header -->
       <div class="modal-header">
-        <h5 class="modal-title">Thêm Món ăn</h5>
+        <h5 class="modal-title">Thêm Món ăn Mới</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="document.getElementById('id01').style.display='none'">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
+      <!-- Modal Body -->
       <div class="modal-body">
-        <form #addForm="ngForm" (ngSubmit)="addDish(addForm)">
+        <form>
           <div class="mb-3">
             <label for="newName" class="form-label">Tên Món ăn</label>
-            <input type="text" class="form-control" id="newName" name="newName" required ngModel>
+            <input type="text" class="form-control" id="newName" name="newName" required>
           </div>
           <div class="mb-3">
             <label for="newDescription" class="form-label">Mô tả</label>
-            <textarea class="form-control" id="newDescription" name="newDescription" rows="3" required ngModel></textarea>
+            <textarea class="form-control" id="newDescription" name="newDescription" rows="3" required></textarea>
           </div>
           <div class="mb-3">
             <label for="newPrice" class="form-label">Giá</label>
-            <input type="number" class="form-control" id="newPrice" name="newPrice" required ngModel>
+            <input type="number" class="form-control" id="newPrice" name="newPrice" required>
           </div>
           <div class="mb-3">
             <label for="newImageURL" class="form-label">URL Hình ảnh</label>
-            <input type="text" class="form-control" id="newImageURL" name="newImageURL" required ngModel>
+            <input type="text" class="form-control" id="newImageURL" name="newImageURL" required>
           </div>
           <div class="mb-3">
             <label for="newCategory" class="form-label">Danh Mục</label>
-            <select class="form-control" id="newCategory" name="newCategory" required ngModel>
+            <select class="form-control" id="newCategory" name="newCategory" required>
               <option *ngFor="let category of categories" [value]="category.CategoryID">{{ category.Name }}</option>
             </select>
           </div>
-          <button style="margin-top: 20px;" type="submit" class="btn btn-primary">Lưu</button>
+          <button style="margin-top: 20px;" type="submit" class="btn btn-primary">Thêm</button>
         </form>
       </div>
     </div>
@@ -84,7 +86,7 @@
       </div>
       <!-- Modal Body -->
       <div class="modal-body">
-        <form #editForm="ngForm" (ngSubmit)="editDish(editForm)">
+        <form (ngSubmit)="updateDish()">
           <div class="mb-3">
             <label for="editName" class="form-label">Tên Món ăn</label>
             <input type="text" class="form-control" id="editName" name="editName" [(ngModel)]="selectedDish.Name" required>
